@@ -3,6 +3,8 @@ Revision history for Bit-Manip
 1.04 UNREL
         - replaced all calls to pow() with bit shift operations instead,
           breaking reliance on stdint.h (closes #10)
+        - renamed bit_toggle() to bit_tog(), left an alias for backward
+          compatibility purposes (closes #8)
 
 1.03    2017-02-09
         - added bit_clr() (per PerlMonks discussion), clears selected bits
